tests/baselines/reference/decoratorCallGeneric.errors.txt
tests/cases/conformance/decorators/decoratorCallGeneric.ts(7,2): error TS2345: Argument of type '类为 C' is not assignable to parameter of type 'I<C>'.
  Types of property 'm' are incompatible.
    Type '() => 无值' is not assignable to type '() => C'.
      Type '无值' is not assignable to type 'C'.


==== tests/cases/conformance/decorators/decoratorCallGeneric.ts (1 errors) ====
    interface I<T> {
        prototype: T,
        m: () => T
    }
    function dec<T>(c: I<T>) { }
    
    @dec
     ~~~
!!! error TS2345: Argument of type '类为 C' is not assignable to parameter of type 'I<C>'.
!!! error TS2345:   Types of property 'm' are incompatible.
!!! error TS2345:     Type '() => 无值' is not assignable to type '() => C'.
!!! error TS2345:       Type '无值' is not assignable to type 'C'.
    class C {
        _brand: any;
        static m() {}
    }
    